# CorrectionTool

./: .gitignore  INTERFACE_ARCHITECTURE.md  README.md  REFACTORING.md  check_dependencies.py  chest_type_default.csv  config.ini  integration_test.py  interface_demo.py  main.py  player_default.csv  pyproject.toml  run_integration_test.py  run_interface_app.py  run_refactored_app.py  run_standalone_app.py  sample_data.txt  sample_rules.csv  source_default.csv  test_correction_service.py  test_simple_validation.py  test_validation_service.py
docs/: INTERFACE_ARCHITECTURE.md  app-plan-rework.md  app-report.md  bugfixing.mdc  bugfixing_new_entries.txt  component-breakdown.md  correction_rules_format.md  data_management_progress.md  dependency_injection_guide.md  drag_drop_functionality.md  event_system_usage.md  filter_system_implementation_plan.md  filtering_system.md  implementation_summary.md  interface_documentation.md  interface_usage_guide.md  todo.mdc  ui_testing_approach.md  ui_testing_guide.md
memory-bank/: activeContext.md  currentDesign.md  drag_drop_functionality.md  event_system_standardization.md  filter_system_implementation.md  productContext.md  progress.md  project_status.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: cleanup_legacy_main_window.py  dataframe_store_test.py  demo_data_management.py  direct_run.py  filter_test.py  generate_puml_diagrams.py  run_service_test.py  run_ui_tests.py  run_ui_tests_headless.py  simple_test.py  standalone_test.py  test_bootstrapping.py  ui_adapter_test.py  update_pyqt_to_pyside.py  (+1 more)
src/: demo.py  (+4 more)
(+198 files in other folders)
