[project]
name = "correctiontool"
version = "0.1.0"
description = "Chest Tracker Correction Tool for fixing OCR-generated text from Total Battle game"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "pyside6>=6.8.2.1",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.23.0",
    "configparser>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "N", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
